--- a/style/main.css
+++ b/style/main.css
@@ -330,64 +330,57 @@ hr {
     font-size: 55px; }
   .tile.tile-2 .tile-inner {
     background: #eee4da;
-    background: url('../tile-sets/pics/1.jpg');
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
   .tile.tile-4 .tile-inner {
     background: #ede0c8;
-    background: url('../tile-sets/pics/2.jpg');
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
   .tile.tile-8 .tile-inner {
-    background: url('../tile-sets/pics/3.jpg');
-     }
+    color: #f9f6f2;
+    background: #f2b179; }
   .tile.tile-16 .tile-inner {
-   
-    background: url('../tile-sets/pics/4.jpg');
-    }
+    color: #f9f6f2;
+    background: #f59563; }
   .tile.tile-32 .tile-inner {
-    
-    background: url('../tile-sets/pics/5.jpg');
-    }
+    color: #f9f6f2;
+    background: #f67c5f; }
   .tile.tile-64 .tile-inner {
-   
-    background: url('../tile-sets/pics/6.jpg');
-    }
+    color: #f9f6f2;
+    background: #f65e3b; }
   .tile.tile-128 .tile-inner {
-   
-    background: url('../tile-sets/pics/12.jpg');
-   
+    color: #f9f6f2;
+    background: #edcf72;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.2381), inset 0 0 0 1px rgba(255, 255, 255, 0.14286);
     font-size: 45px; }
     @media screen and (max-width: 520px) {
       .tile.tile-128 .tile-inner {
-        font-size: 25px;
-         } }
+        font-size: 25px; } }
   .tile.tile-256 .tile-inner {
-   
-    background: url('../tile-sets/pics/8.jpg');
+    color: #f9f6f2;
+    background: #edcc61;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.31746), inset 0 0 0 1px rgba(255, 255, 255, 0.19048);
     font-size: 45px; }
     @media screen and (max-width: 520px) {
       .tile.tile-256 .tile-inner {
         font-size: 25px; } }
   .tile.tile-512 .tile-inner {
-    
-    background: url('../tile-sets/pics/9.jpg');
+    color: #f9f6f2;
+    background: #edc850;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.39683), inset 0 0 0 1px rgba(255, 255, 255, 0.2381);
     font-size: 45px; }
     @media screen and (max-width: 520px) {
       .tile.tile-512 .tile-inner {
         font-size: 25px; } }
   .tile.tile-1024 .tile-inner {
-    
-    background: url('../tile-sets/pics/10.jpg');
+    color: #f9f6f2;
+    background: #edc53f;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.47619), inset 0 0 0 1px rgba(255, 255, 255, 0.28571);
     font-size: 35px; }
     @media screen and (max-width: 520px) {
       .tile.tile-1024 .tile-inner {
         font-size: 15px; } }
   .tile.tile-2048 .tile-inner {
-    
-    background: url('../tile-sets/pics/11.jpg');
+    color: #f9f6f2;
+    background: #edc22e;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.55556), inset 0 0 0 1px rgba(255, 255, 255, 0.33333);
     font-size: 35px; }
     @media screen and (max-width: 520px) {
